--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -19,23 +19,19 @@ RUN cd .wasp/build/server && npx prisma generate --schema='../db/schema.prisma'
 
 # Stage 2: Production
 FROM node:22-slim AS production
+
+# --- YENİ VE DAHA BASİT YÖNTEM ---
+
+# Derlenmiş sunucunun tamamını /app klasörüne kopyala
+COPY --from=builder /app/.wasp/build/server /app
+
+# Çalışma dizinini bu yeni klasör olarak ayarla
 WORKDIR /app
-
-COPY --from=builder /app/.wasp/build/server/node_modules ./node_modules
-COPY --from=builder /app/node_modules ./node_modules
-
-# DÜZELTME 1: Derlenmiş sunucu kodunu doğru yere kopyalıyoruz
-COPY --from=builder /app/.wasp/build/server/src .
-
-# Gerekli diğer dosyaları kopyala
-COPY --from=builder /app/.wasp/build/server/package.json .
-COPY --from=builder /app/.wasp/build/server/package-lock.json .
-COPY --from=builder /app/.wasp/build/db ./db
 
 ENV NODE_ENV=production
 ENV PORT=3001
 
 EXPOSE 3001
 
-# DÜZELTME 2: Doğru başlangıç komutunu veriyoruz
-CMD ["node", "index.js"]
+# Uygulamayı src klasörünün içindeki index.js dosyasından başlat
+CMD ["node", "src/index.js"]
