--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,16 +6,11 @@ on:
       - main
 
 jobs:
-  deploy:
+  build_and_deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -27,43 +22,59 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # --- 1. Sunucu (Server) Kurulumu ---
-      - name: Build and push server Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ./Dockerfile.server
-          push: true
-          tags: ghcr.io/hemidzada/opensaas-server:main
-
-      # --- 2. İstemci (Client) Kurulumu ---
-      - name: Build and push client Docker image
+      # --- TÜM DERLEME İŞLEMLERİNİ TEK BİR ADIMDA YAPIYORUZ ---
+      - name: Build Project
         run: |
-          echo "--> 1. Navigating to the app directory..."
           cd ./template/app
-
-          echo "--> 2. Installing npm dependencies..."
           npm install
-
-          echo "--> 3. Installing Wasp and building the client..."
           curl -sSL https://get.wasp-lang.dev/installer.sh | sh
           /home/runner/.local/bin/wasp build
+
+      # --- SUNUCU (SERVER) İMAJINI OLUŞTURUYORUZ ---
+      - name: Build and Push Server Image
+        run: |
+          # Sunucu için Dockerfile'ı anlık olarak oluşturuyoruz
+          cat > Dockerfile.server <<EOF
+          FROM node:22-slim
+          WORKDIR /app
+          COPY --from=builder /app/.wasp/build/server/ ./
+          ENV NODE_ENV=production
+          ENV PORT=3001
+          EXPOSE 3001
+          CMD ["node", "src/index.js"]
+          EOF
+
+          # Dockerfile'ın builder aşamasını çalıştırıp dosyaları hazırlıyoruz
+          docker build \
+            --target builder \
+            -f ./Dockerfile.server \
+            -t server-builder-stage .
           
-          echo "--> 4. Creating the client Dockerfile..."
-          # Dockerfile'ı ana dizinde oluşturuyoruz.
-          cat > ../../client.Dockerfile <<EOF
+          # Hazırlanan dosyalarla son imajı oluşturup pushluyoruz
+          docker build \
+            --build-arg BUILDKIT_INLINE_CACHE=1 \
+            --cache-from=server-builder-stage \
+            -f ./Dockerfile.server \
+            -t ghcr.io/hemidzada/opensaas-server:main \
+            --push .
+
+      # --- İSTEMCİ (CLIENT) İMAJINI OLUŞTURUYORUZ ---
+      - name: Build and Push Client Image
+        run: |
+          # İstemci için Dockerfile'ı anlık olarak oluşturuyoruz
+          cat > Dockerfile.client <<EOF
           FROM nginx:alpine
-          # Gördüğümüz doğru yola göre kopyalama yapıyoruz.
           COPY ./template/app/.wasp/build/web-app /usr/share/nginx/html
           EOF
-          
-          echo "--> 5. Building and pushing the client image..."
-          cd ../../
-          docker buildx build --file ./client.Dockerfile --tag ghcr.io/hemidzada/opensaas-client:main --push .
-      
-      # --- 3. Coolify'i Tetikleme ---
-      - name: Trigger Coolify server deploy
-        run: curl -X POST ${{ secrets.SERVER_COOLIFY_WEBHOOK }}
 
-      - name: Trigger Coolify client deploy
-        run: curl -X POST ${{ secrets.CLIENT_COOLIFY_WEBHOOK }}
+          # İstemci imajını oluşturup pushluyoruz
+          docker build \
+            -f ./Dockerfile.client \
+            -t ghcr.io/hemidzada/opensaas-client:main \
+            --push .
+      
+      # --- COOLIFY'İ TETİKLİYORUZ ---
+      - name: Trigger Coolify Deploys
+        run: |
+          curl -X POST ${{ secrets.SERVER_COOLIFY_WEBHOOK }}
+          curl -X POST ${{ secrets.CLIENT_COOLIFY_WEBHOOK }}
