--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,7 +27,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # --- 1. Projeyi Derle (Hem Sunucu hem İstemci için) ---
+      # --- 1. Projeyi Derle ---
       - name: Install Dependencies and Build Project
         run: |
           cd ./template/app
@@ -41,14 +41,16 @@ jobs:
 
       # --- 2. Sunucu (Server) İmajını Oluştur ve Yükle ---
       - name: Build and Push Server Image
-        uses: docker/build-push-action@v4
-        with:
-          # NIHAI DÜZELTME: Context yolunu bir üst klasör olarak düzeltiyoruz.
-          context: ./template/app
-          file: ./template/app/.wasp/build/Dockerfile
-          push: true
-          tags: ghcr.io/hemidzada/opensaas-server:main
+        run: |
+          # ÖNEMLİ DÜZELTME: Docker'ın aradığı 'db' klasörünü oluşturuyoruz
+          mkdir -p ./template/app/.wasp/build/db
+          mv ./template/app/.wasp/build/schema.prisma ./template/app/.wasp/build/db/
 
+          docker buildx build \
+            --file ./template/app/.wasp/build/Dockerfile \
+            --tag ghcr.io/hemidzada/opensaas-server:main \
+            --push ./template/app
+            
       # --- 3. İstemci (Client) İmajını Oluştur ve Yükle ---
       - name: Build and Push Client Image
         run: |
