--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,7 +27,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # --- 1. Projeyi Derle ---
+      # --- 1. Projeyi Derle (Hem Sunucu hem İstemci için) ---
       - name: Install Dependencies and Build Project
         run: |
           cd ./template/app
@@ -39,18 +39,19 @@ jobs:
           cd ./.wasp/build/web-app
           REACT_APP_API_URL=https://api.vidhub.ai npm run build
 
+      # --- SON DÜZELTME: Docker'ın aradığı 'db' klasörünü oluşturuyoruz ---
+      - name: Create missing 'db' directory before server build
+        run: mkdir -p ./template/app/.wasp/build/db
+
       # --- 2. Sunucu (Server) İmajını Oluştur ve Yükle ---
       - name: Build and Push Server Image
-        run: |
-          # ÖNEMLİ DÜZELTME: Docker'ın aradığı 'db' klasörünü oluşturuyoruz
-          mkdir -p ./template/app/.wasp/build/db
-          mv ./template/app/.wasp/build/schema.prisma ./template/app/.wasp/build/db/
+        uses: docker/build-push-action@v4
+        with:
+          context: ./template/app/.wasp/build
+          file: ./template/app/.wasp/build/Dockerfile
+          push: true
+          tags: ghcr.io/hemidzada/opensaas-server:main
 
-          docker buildx build \
-            --file ./template/app/.wasp/build/Dockerfile \
-            --tag ghcr.io/hemidzada/opensaas-server:main \
-            --push ./template/app
-            
       # --- 3. İstemci (Client) İmajını Oluştur ve Yükle ---
       - name: Build and Push Client Image
         run: |
