--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,35 +27,29 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # --- 1. Projeyi Derle ve Veritabanını Hazırla ---
-      - name: Install, Build, and Prepare Database
-        # Veritabanı URL'sini GitHub Secrets'tan alıyoruz.
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      # --- 1. Projeyi Derle ---
+      - name: Install Dependencies and Build Project
         run: |
           cd ./template/app
           npm install
           curl -sSL https://get.wasp-lang.dev/installer.sh | sh
-          
-          # Veritabanı "migration" dosyalarını oluşturuyoruz
-          echo "init" | /home/runner/.local/bin/wasp db migrate-dev
-          
-          # Projeyi derliyoruz
           /home/runner/.local/bin/wasp build
           
           echo "Building client for production..."
           cd ./.wasp/build/web-app
           REACT_APP_API_URL=https://api.vidhub.ai npm run build
 
-      # --- 2. Sunucu (Server) İmajını Oluştur ve Yükle ---
-      - name: Build and Push Server Image
-        uses: docker/build-push-action@v4
-        with:
-          context: ./template/app
-          file: ./template/app/.wasp/build/Dockerfile
-          push: true
-          tags: ghcr.io/hemidzada/opensaas-server:main
-
+      # --- 2. Sunucu Dockerfile'ını Düzelt ve İmajı Oluştur ---
+      - name: Fix Dockerfile, Build and Push Server Image
+        run: |
+          # NIHAI DÜZELTME: Dockerfile'a veritabanı migrate komutunu ekliyoruz
+          sed -i '/CMD \["npm", "run", "start-production"\]/i RUN npx prisma migrate deploy --schema=../db/schema.prisma' ./template/app/.wasp/build/Dockerfile
+          
+          docker buildx build \
+            --file ./template/app/.wasp/build/Dockerfile \
+            --tag ghcr.io/hemidzada/opensaas-server:main \
+            --push ./template/app
+            
       # --- 3. İstemci (Client) İmajını Oluştur ve Yükle ---
       - name: Build and Push Client Image
         run: |
