--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,6 +27,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      # --- 1. Projeyi Derle (Hem Sunucu hem İstemci için) ---
       - name: Install Dependencies and Build Project
         run: |
           cd ./template/app
@@ -37,7 +38,14 @@ jobs:
           echo "Building client for production..."
           cd ./.wasp/build/web-app
           REACT_APP_API_URL=https://api.vidhub.ai npm run build
-            
+
+      # --- 2. Sunucu Dockerfile'ını Düzelt ---
+      - name: Fix Server Dockerfile for Database Migrations
+        run: |
+          # Dockerfile'ın içine, uygulama başlamadan önce veritabanı migrate komutunu ekliyoruz.
+          sed -i '/CMD \["npm", "run", "start-production"\]/i RUN npx prisma migrate deploy --schema=../db/schema.prisma' ./template/app/.wasp/build/Dockerfile
+
+      # --- 3. Sunucu (Server) İmajını Oluştur ve Yükle ---
       - name: Build and Push Server Image
         uses: docker/build-push-action@v4
         with:
@@ -46,6 +54,7 @@ jobs:
           push: true
           tags: ghcr.io/hemidzada/opensaas-server:main
 
+      # --- 4. İstemci (Client) İmajını Oluştur ve Yükle ---
       - name: Build and Push Client Image
         run: |
           cat > Dockerfile.client <<EOF
@@ -59,6 +68,7 @@ jobs:
             --tag ghcr.io/hemidzada/opensaas-client:main \
             --push ./template/app/.wasp/build/web-app
       
+      # --- 5. Coolify'i Tetikle ---
       - name: Trigger Coolify Deploys
         run: |
           curl -X POST ${{ secrets.SERVER_COOLIFY_WEBHOOK }}
