--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -29,8 +29,16 @@ jobs:
       - name: Docker setup
         uses: docker/setup-buildx-action@v3
 
+      - name: Download Wasp build artifacts from linked PR
+        uses: wasp-lang/wasp/.github/actions/fetch-nightly-cli@main
+        with:
+          output-dir: ${{ runner.temp }}/wasp-cli
+          branch: main
+
       - name: Install Wasp
-        run: curl -sSL https://get.wasp.sh/installer.sh | sh -s -- -v ${{ env.WASP_VERSION }}
+        run: >
+          curl -sSL https://get.wasp.sh/installer.sh
+          | sh -s -- -f ${{ runner.temp }}/wasp-cli/wasp-*.tar.gz
 
       - name: Cache global node modules
         uses: actions/cache@v4
