--- a/template/app/components.json
+++ b/template/app/components.json
@@ -12,7 +12,7 @@
   },
   "aliases": {
     "components": "src/components",
-    "utils": "src/lib/utils",
+    "utils": "src/client/utils",
     "ui": "src/components/ui",
     "lib": "src/lib",
     "hooks": "src/hooks"
