--- a/.github/workflows/check-opensaas-diffs.yml
+++ b/.github/workflows/check-opensaas-diffs.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install deps
         run: |
           sudo apt-get update
-          sudo apt-get install -y diffutils patch file git
+          # sudo apt-get install -y diffutils patch file git
 
       - name: Generate diffs
         run: |
