--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -28,7 +28,9 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Install Wasp
-        run: curl -sSL https://get.wasp.sh/installer.sh | sh -s -- -v ${{ env.WASP_VERSION }}
+        run:
+          # Installs the latest published build of the CLI from the `main` branch.
+          npm i -g https://pkg.pr.new/wasp-lang/wasp/@wasp.sh/wasp-cli@main
 
       - name: Cache global node modules
         uses: actions/cache@v4
