Update to Wasp 20

--- a/template/app/package.json
+++ b/template/app/package.json
@@ -10,7 +10,6 @@
     "@aws-sdk/s3-presigned-post": "^3.750.0",
     "@aws-sdk/s3-request-presigner": "^3.523.0",
     "@google-analytics/data": "4.1.0",
-    "@headlessui/react": "1.7.13",
     "@hookform/resolvers": "^5.1.1",
     "@lemonsqueezy/lemonsqueezy.js": "^3.2.0",
     "@polar-sh/sdk": "^0.34.3",
@@ -31,15 +30,13 @@
     "apexcharts": "3.41.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "headlessui": "^0.0.0",
     "lucide-react": "^0.525.0",
-    "node-fetch": "3.3.0",
     "openai": "^4.55.3",
     "prettier": "3.1.1",
     "prettier-plugin-tailwindcss": "0.5.11",
-    "react": "^18.2.0",
+    "react": "^19.2.1",
     "react-apexcharts": "1.4.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.60.0",
     "react-router-dom": "^6.26.2",
     "stripe": "18.1.0",
@@ -52,8 +49,9 @@
   },
   "devDependencies": {
     "@faker-js/faker": "8.3.1",
+    "@testing-library/react": "^16.3.1",
     "@types/express": "^5.0.0",
-    "@types/react": "^18.0.37",
+    "@types/react": "^19.2.7",
     "prisma": "5.19.1",
     "typescript": "5.8.2",
     "vite": "^7.0.6"
