--- a/template/app/package.json
+++ b/template/app/package.json
@@ -25,15 +25,15 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-toast": "^1.2.14",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.7",
+    "@tailwindcss/forms": "^0.5.11",
+    "@tailwindcss/typography": "^0.5.19",
     "apexcharts": "3.41.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "openai": "^4.55.3",
     "prettier": "3.1.1",
-    "prettier-plugin-tailwindcss": "0.5.11",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "react": "^19.2.1",
     "react-apexcharts": "1.4.1",
     "react-dom": "^19.2.1",
@@ -41,7 +41,7 @@
     "react-router-dom": "^6.26.2",
     "stripe": "18.1.0",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "^4.1.18",
     "tailwindcss-animate": "^1.0.7",
     "vanilla-cookieconsent": "^3.0.1",
     "wasp": "file:.wasp/out/sdk/wasp",
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "8.3.1",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/express": "^5.0.0",
     "@types/react": "^19.2.7",
     "prisma": "5.19.1",
