--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -53,27 +53,17 @@ jobs:
       # used in tests and therefore need real values, we set them in the GitHub secrets settings and
       # access them in a step below.
       - name: Set required wasp app env vars to mock values
-        working-directory: ./template
-        run: |
-          cd app
-          cp .env.server.example .env.server && cp .env.client.example .env.client
-
-      - name: Check that patching demo app (opensaas-sh) works
-        working-directory: ./opensaas-sh
-        run: |
-          ./tools/patch.sh
+        working-directory: ./template/app
+        run: cp .env.server.example .env.server && cp .env.client.example .env.client
 
       - name: "[e2e-tests] Install Node.js dependencies for Playwright tests"
         if: steps.cache-e2e-tests.outputs.cache-hit != 'true'
-        working-directory: ./template
-        run: |
-          cd e2e-tests
-          npm ci
+        working-directory: ./template/e2e-tests
+        run: npm ci
 
       - name: "[e2e-tests] Store Playwright's Version"
-        working-directory: ./template
+        working-directory: ./template/e2e-tests
         run: |
-          cd e2e-tests
           PLAYWRIGHT_VERSION=$(npm ls @playwright/test | grep @playwright | sed 's/.*@//')
           echo "Playwright's Version: $PLAYWRIGHT_VERSION"
           echo "PLAYWRIGHT_VERSION=$PLAYWRIGHT_VERSION" >> $GITHUB_ENV
@@ -87,10 +77,8 @@ jobs:
 
       - name: "[e2e-tests] Set up Playwright"
         if: steps.cache-playwright-browsers.outputs.cache-hit != 'true'
-        working-directory: ./template
-        run: |
-          cd e2e-tests
-          npx playwright install --with-deps
+        working-directory: ./template/e2e-tests
+        run: npx playwright install --with-deps
 
       - name: "[e2e-tests] Install Stripe CLI"
         run: |
@@ -105,8 +93,7 @@ jobs:
       - name: "[e2e-tests] Run Stripe CLI to listen for webhooks"
         env:
           STRIPE_DEVICE_NAME: ${{ secrets.STRIPE_DEVICE_NAME }}
-        run: |
-          stripe listen --api-key ${{ secrets.STRIPE_KEY }} --forward-to localhost:3001/payments-webhook &
+        run: stripe listen --api-key ${{ secrets.STRIPE_KEY }} --forward-to localhost:3001/payments-webhook &
 
       - name: "[e2e-tests] Run Playwright tests"
         env:
@@ -121,7 +108,5 @@ jobs:
           SKIP_EMAIL_VERIFICATION_IN_DEV: true
           # Client-side env vars
           REACT_APP_GOOGLE_ANALYTICS_ID: G-H3LSJCK95H
-        working-directory: ./template
-        run: |
-          cd e2e-tests
-          npm run e2e:playwright
+        working-directory: ./template/e2e-tests
+        run: npm run e2e:playwright
