--- a/opensaas-sh/blog/package.json
+++ b/opensaas-sh/blog/package.json
@@ -19,7 +19,8 @@
     "prettier": "^3.4.2",
     "sharp": "^0.32.5",
     "starlight-blog": "^0.15.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vanilla-cookieconsent": "^3.1.0"
   },
   "devDependencies": {
     "front-matter": "^4.0.2",
